GUI first iteration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,6 @@ name = "wordle"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "pyside6>=6.9.2",
     "pyspellchecker>=0.8.3",
 ]
