--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,6 @@ requires-python = ">=3.13"
 dependencies = [
     "pyside6>=6.9.2",
     "pyspellchecker>=0.8.3",
+    "pyttsx3>=2.99",
+    "wordhoard>=1.5.5",
 ]
