Improve word list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,4 @@
 name = "wordle"
 version = "0.1.0"
 requires-python = ">=3.13"
-dependencies = [
-    "pyspellchecker>=0.8.3",
-]
+dependencies = []
